--- a/serenity.properties
+++ b/serenity.properties
@@ -1,5 +1,10 @@
-# Serenity Report properties
-# These properties are used by the Gradle build
-# serenity.project.name = Serenity Test Suite Using JUnit
-# serenity.test.root=starter
-
+serenity.properties.name=SERENITY-DEMO
+serenity.outputDirectory=target/serenity
+serenity.take.screenshots=AFTER_EACH_STEP
+serenity.maintain.session=true
+webdriver.autodownload=false
+webdriver.driver=chrome
+webdriver.chrome.driver=src/drivers/chromedriver.exe
+webdriver.timeouts.implicitlywait=500
+webdriver.wait.for.timeout=5000
+chrome.switches=--start-maximized;--no-sandbox;--ignore-certificate-errors;
